--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -168,7 +168,7 @@ header {
                 font-weight: 700;
                 text-transform: uppercase;
                 margin-top: 0;
-                margin-bottom: 0;
+                margin-bottom: 200px;
             }
             hr {
                 margin: 30px auto;
@@ -194,6 +194,9 @@ header {
                 max-width: 1000px;
                 margin-left: auto;
                 margin-right: auto;
+				h1{
+					margin-top:100px
+				}
                 p {
                     font-size: 18px;
                     max-width: 80%;
