--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <div class="header-content">
         <div class="header-content-inner">
             <h1>first-birthday party</h1>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <a href="#services" class="btn btn-primary btn-xl page-scroll">information</a>
         </div>
     </div>
 </header>
