--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,8 @@
-  <aside class="bg-dark">
+  <aside>
       <div class="container text-center">
           <div class="call-to-action">
-              <h2>Free Download at Start Bootstrap!</h2>
-              <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+              <h2>감사합니다.</h2>
+			  <hr>
           </div>
       </div>
   </aside>
