--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -11,3 +11,19 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="js/creative.js"></script>
+<script type="text/javascript">
+		var oPoint = new nhn.api.map.LatLng(37.5010226, 127.0396037);
+		nhn.api.map.setDefaultPoint('LatLng');
+		oMap = new nhn.api.map.Map('testMap' ,{
+								point : oPoint,
+								zoom : 10,
+								enableWheelZoom : true,
+								enableDragPan : true,
+								enableDblClickZoom : false,
+								mapMode : 0,
+								activateTrafficMap : false,
+								activateBicycleMap : false,
+								minMaxLevel : [ 1, 14 ],
+								size : new nhn.api.map.Size(500, 400)
+						});
+</script>
