--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">information</h2>
+                <h2 class="section-heading">invitation</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -24,5 +24,9 @@
                 </div>
             </div>
         </div>
+		<hr class="primary">
+		<div class="map" style="clear:both;overflow:hidden;width:300px;margin:20px auto -20px;border:1px solid rgba(0,0,0,.05)">
+			<div id = "testMap"></div>
+		</div>
     </div>
 </section>
