--- a/_includes/services.html
+++ b/_includes/services.html
@@ -9,14 +9,14 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg col-md-6 text-center">
+            <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-calendar wow bounceIn text-primary"></i>
                     <h3>일시</h3>
                     <p class="text-muted">2015년 12월 12일(토) 저녁 6:00</p>
                 </div>
             </div>
-            <div class="col-lg col-md-6 text-center">
+            <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-map-marker wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>장소</h3>
